--- a/indexnuevo.html
+++ b/indexnuevo.html
@@ -22,13 +22,14 @@
                 <h2>Del 3 al 8 de Junio</h2>
                 <h4>2024</h4>
                 <div class="btn-accion">
-                    <a href="https://contenidx.com.ar" target="_blank" id="programacion">
+                    <a href="#info-programacion" id="programacion">
                         <span class="text">¿Quiénes vienen?</span>
                         <span>Ver Programación</span>
                     </a>
                     <div id="entrada">
-                        <img src="/assets/icons/ticket-simple-solid.svg" alt="ticket entradas">
-                        <a href="https://contenidx.com.ar">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="padding: 0rem .5rem;" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="#D9D9D9" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-3a2 2 0 0 0 0-4V7a2 2 0 0 1 2-2"/></svg>
+                        <!-- <img src="/assets/icons/ticket-simple-solid.svg" alt="ticket entradas"> -->
+                        <a href="#info-entradas">
                             Entradas</a>
                     </div>
                 </div>
@@ -49,12 +50,320 @@
     </section>
 
     <section id="info-entradas">
-        <h1>Entradas</h1>
+        <!-- <h1>Entradas</h1>
         <div class="seccion-card-entradas d-flex flex-row">
             <div class="card-entrada mx-2 px-1"><h3>Entrada General</h3><p>45 min en general</p></div>
             <div class="card-entrada mx-2 px-1"></div>
             <div class="card-entrada mx-2 px-1"></div>
+        </div> -->
+
+
+        <div class="section">	
+            <div class="container pt-5">
+                <div class="row justify-content-center">
+                    <div class="col-12 text-center">
+                        <!-- <h1 class="pb-4">Choose <i class='uil uil-bus color-yellow'></i> ticket</h1> -->
+                        <div class="section d-flex justify-content-center entradas-tickets">
+                            <input class="checkbox-ticket" type="radio" name="ticket" id="ticket-1">
+                            <label for="ticket-1">
+                                <span class="top-dots">
+                                    <span class="section dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </span>
+                                </span>
+                                <img src="/images/iso-solo.svg" alt="tata">
+                                <span class="duration">
+                                    Entrada General
+                                </span>
+                                <span class="price mt-2 pb-4 mb-3">
+                                    <sup>$</sup>8000
+                                </span>
+                                <span class="section dots">
+                                    <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                </span>
+                                <span class="section pt-4">
+                                    <i class='uil uil-clock-two mt-3'></i>
+                                </span>
+                                <span class="time mt-2">
+                                    2:00 pm - 2:30 pm
+                                </span>
+                                <span class="bottom-dots">
+                                    <span class="section dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </span>
+                                </span>
+                            </label><!--
+                            --><input class="checkbox-ticket" type="radio" name="ticket" id="ticket-2">
+                            <label for="ticket-2">
+                                <span class="top-dots">
+                                    <span class="section dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </span>
+                                </span>
+                                <img src="/images/iso-solo.svg" alt="tata">
+                                <span class="duration">
+                                    Jubilados y Estudiantes
+                                </span>
+                                <span class="price mt-2 pb-4 mb-3">
+                                    <sup>$</sup>6000
+                                </span>
+                                <span class="section dots">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </span>
+                                <span class="section pt-4">
+                                    <i class='uil uil-clock-two mt-3'></i>
+                                </span>
+                                <span class="time mt-2">
+                                    2:00 pm - 3:00 pm
+                                </span>
+                                <span class="bottom-dots">
+                                    <span class="section dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </span>
+                                </span>
+                            </label><!--
+                            --><input class="checkbox-ticket" type="radio" name="ticket" id="ticket-3">
+                            <label for="ticket-3">
+                                <span class="top-dots">
+                                    <span class="section dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </span>
+                                </span>
+                                <img src="/images/iso-solo.svg" alt="tata">
+                                <span class="duration">
+                                    Estudiantes con <span>bono</span>
+                                </span>
+                                <span class="price mt-2 pb-4 mb-3">
+                                    <sup>$</sup>4000
+                                </span>
+                                <span class="section dots">
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                    <span></span>
+                                </span>
+                                <span class="section pt-4">
+                                    <i class='uil uil-clock-two mt-3'></i>
+                                </span>
+                                <span class="time mt-2">
+                                    2:00 pm - 3:30 pm
+                                </span>
+                                <span class="bottom-dots">
+                                    <span class="section dots">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </span>
+                                </span>
+                            </label>
+                            <div class="w-100"></div>
+                        </div>
+                        <div class="d-flex justify-content-center compar-entradas">
+                            <a href="https://wa.me/543751362949?text=Me%20gustaría%20consultar%20por%20las%20entradas..." class="btn mt-4 d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-3a2 2 0 0 0 0-4V7a2 2 0 0 1 2-2"/></svg> Comprar entradas</a>
+                        </div>
+                        <div class="text-center d-flex justify-content-center aclaracion-wpp">
+                            <p>Al hacer click te redirijimos a Whatsapp</p>
+                        </div>
+                    </div>
+                </div>
+            </div>			
         </div>
+
+
+
     </section>
 
     <section id="info-sedes">
