--- a/indexnuevo.html
+++ b/indexnuevo.html
@@ -6,13 +6,27 @@
     <title>Festival de Títeres</title>
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/css/bootstrap-grid.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- <link rel="stylesheet" href="/css/css/bootstrap-grid.css.map"> -->
     <!-- <link rel="stylesheet" href="/css/css/bootstrap-grid.min.css"> -->
 </head>
 <body>
-    <nav>
+    <section id="section-navegador">
+        <nav id="navegador" style="display: flex;">
+            <ul>
+                <li><a href="indexnuevo.html"><img src="/images/iso-solo.svg" alt="tata logo"></a></li>
+                <!-- <li><a href="indexnuevo.html">Inicio</a></li> -->
+                <li><a href="indexnuevo.html#info-programacion">Programación</a></li>
+                <li><a href="indexnuevo.html#info-entradas">Entradas</a></li>
+                <li><a href="sedes.html#sedes">Sedes</a></li>
+                <li><a href="sedes.html#obras">Obras</a></li>
+                <li><a href="nosotros.html">Nosotres</a></li>
+                <li><a href="nosotros.html#quienes-somos">Sumate</a></li>
+                <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
+        </nav>
+    </section>
 
-    </nav>
     <section id="inicio">
         <div class="d-flex justify-content-center flex-column">
             <div class="d-flex justify-content-center">
@@ -20,7 +34,7 @@
             </div>
             <div class="accion d-flex justify-content-center align-items-center flex-column">
                 <h2>Del 3 al 8 de Junio</h2>
-                <h4>2024</h4>
+                <h4>2025</h4>
                 <div class="btn-accion">
                     <a href="#info-programacion" id="programacion">
                         <span class="text">¿Quiénes vienen?</span>
@@ -28,7 +42,6 @@
                     </a>
                     <div id="entrada">
                         <svg xmlns="http://www.w3.org/2000/svg" style="padding: 0rem .5rem;" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="#D9D9D9" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-3a2 2 0 0 0 0-4V7a2 2 0 0 1 2-2"/></svg>
-                        <!-- <img src="/assets/icons/ticket-simple-solid.svg" alt="ticket entradas"> -->
                         <a href="#info-entradas">
                             Entradas</a>
                     </div>
@@ -50,19 +63,14 @@
     </section>
 
     <section id="info-entradas">
-        <!-- <h1>Entradas</h1>
-        <div class="seccion-card-entradas d-flex flex-row">
-            <div class="card-entrada mx-2 px-1"><h3>Entrada General</h3><p>45 min en general</p></div>
-            <div class="card-entrada mx-2 px-1"></div>
-            <div class="card-entrada mx-2 px-1"></div>
-        </div> -->
-
-
         <div class="section">	
             <div class="container pt-5">
                 <div class="row justify-content-center">
                     <div class="col-12 text-center">
-                        <!-- <h1 class="pb-4">Choose <i class='uil uil-bus color-yellow'></i> ticket</h1> -->
+                        <div class="d-flex justify-content-center align-items-center flex-column">
+                            <h2>Entradas</h2>
+                            <p>Estos son los precios de las entradas del 2025</p>
+                        </div>
                         <div class="section d-flex justify-content-center entradas-tickets">
                             <input class="checkbox-ticket" type="radio" name="ticket" id="ticket-1">
                             <label for="ticket-1">
@@ -129,7 +137,7 @@
                                     <i class='uil uil-clock-two mt-3'></i>
                                 </span>
                                 <span class="time mt-2">
-                                    2:00 pm - 2:30 pm
+                                    Sala del Círculo Médico - Eldorado
                                 </span>
                                 <span class="bottom-dots">
                                     <span class="section dots">
@@ -224,7 +232,7 @@
                                     <i class='uil uil-clock-two mt-3'></i>
                                 </span>
                                 <span class="time mt-2">
-                                    2:00 pm - 3:00 pm
+                                    Sala del Círculo Médico - Eldorado
                                 </span>
                                 <span class="bottom-dots">
                                     <span class="section dots">
@@ -319,7 +327,7 @@
                                     <i class='uil uil-clock-two mt-3'></i>
                                 </span>
                                 <span class="time mt-2">
-                                    2:00 pm - 3:30 pm
+                                    Sala del Círculo Médico - Eldorado
                                 </span>
                                 <span class="bottom-dots">
                                     <span class="section dots">
@@ -351,32 +359,65 @@
                             </label>
                             <div class="w-100"></div>
                         </div>
-                        <div class="d-flex justify-content-center compar-entradas">
+                        <!-- <div class="d-flex justify-content-center compar-entradas">
                             <a href="https://wa.me/543751362949?text=Me%20gustaría%20consultar%20por%20las%20entradas..." class="btn mt-4 d-flex justify-content-center"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 5v2m0 4v2m0 4v2M5 5h14a2 2 0 0 1 2 2v3a2 2 0 0 0 0 4v3a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-3a2 2 0 0 0 0-4V7a2 2 0 0 1 2-2"/></svg> Comprar entradas</a>
                         </div>
                         <div class="text-center d-flex justify-content-center aclaracion-wpp">
-                            <p>Al hacer click te redirijimos a Whatsapp</p>
-                        </div>
+                            <p>Al hacer click te llevamos a Whatsapp</p>
+                        </div> -->
                     </div>
                 </div>
             </div>			
         </div>
-
-
-
     </section>
 
     <section id="info-sedes">
-        <h1>Sedes</h1>
+        <!-- <h1>Sedes</h1> -->
+        <a href="sedes.html">
+            <div class="card-horizontal d-flex">
+                <img src="/assets/img/Misiones-Mapa.png" alt="Mapa">
+                <div class="d-flex flex-column">
+                    <h5>Estiramos los brazos para llegar bien lejos!</h5>
+                    <h3>Las sedes del festival</h3>
+                    <p>Hacé click para ver todas las sedes</p>
+                </div>
+            </div>
+        </a>
     </section>
 
-    <footer>
-        <div class="item-footer"></div>
-        <div class="item-footer"></div>
-        <div class="item-footer"></div>
-        <div class="item-footer"></div>
+    <footer class="d-flex justify-content-between">
+        <div class="d-flex">
+            <div class="item-footer">
+                <div>
+                    <p class="px-1">Estamos creciendo todos los años un poco más. Si querés sumarte al festival podés <br>
+                        <a class="px-3 py-2" href="#inicio"><i class="fa-regular fa-envelope px-1"></i> Escribirnos</a>
+                    </p>
+                </div>
+            </div>
+            <div class="item-footer">
+                <div class="d-flex flex-column">
+                    <a class="px-1 mb-1" href="#inicio">Grupos y espectáculos</a>
+                    <a class="px-1 mb-1" href="#inicio">Quienes somos</a>
+                    <a class="px-1 mb-1" href="#inicio">Más festivales</a>
+                    <a class="px-1 mb-1" href="#inicio">Agradecimientos</a>
+                    <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p>
+                </div>
+            </div>
+        </div>
+        <div id="int" class="d-flex flex-column flex-wrap justify-content-between">
+            <div class="d-flex align-items-start justify-content-center flex-column">
+                <p class="px-1">
+                    Este festival cuenta con el apoyo del
+                </p>
+                <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+            </div>
+            <a class="prueba-gsap px-3 py-2" href="#inicio"><i class="fa-solid fa-angles-up px-1"></i></a>
+        </div>
     </footer>
 
     <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script>
+    <script src="js/gsap.min.js"></script>
+    <script src="js/custom.js"></script>
+
 </body>
 </html>
