--- a/indexnuevo.html
+++ b/indexnuevo.html
@@ -35,7 +35,7 @@
             </div>
             <div class="accion d-flex justify-content-center align-items-center flex-column">
                 <h2>Del 3 al 8 de Junio</h2>
-                <h4>2025</h4>
+                <h2 id="edicion">2025</h2>
                 <div class="btn-accion">
                     <a href="#info-programacion" id="programacion">
                         <span class="text">¿Quiénes vienen?</span>
