--- a/indexnuevo.html
+++ b/indexnuevo.html
@@ -12,7 +12,6 @@
 </head>
 <body>
     <section id="section-navegador">
-        <div id="nav-trigger"></div>
         <nav id="navegador">
             <ul>
                 <li><a href="indexnuevo.html"><img src="/images/iso-solo.svg" alt="tata logo"></a></li>
@@ -23,7 +22,10 @@
                 <li><a href="obras-y-sedes.html#sedes">Sedes</a></li>
                 <li><a href="nosotros.html">Nosotres</a></li>
                 <li><a href="nosotros.html#quienes-somos">Sumate</a></li>
-                <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <div class="nav-redes">
+                    <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/TataPiriri" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                </div>
             </ul>
         </nav>
     </section>
@@ -80,7 +82,7 @@
                                     Entrada General
                                 </span>
                                 <span class="price mt-2 pb-4 mb-3">
-                                    <sup>$</sup>8000
+                                    <span>$</span>8000
                                 </span>
                                 <span class="time mt-2">
                                     Sala del Círculo Médico - Eldorado
@@ -93,7 +95,7 @@
                                     Jubilados y Estudiantes
                                 </span>
                                 <span class="price mt-2 pb-4 mb-3">
-                                    <sup>$</sup>6000
+                                    <span>$</span>6000
                                 </span>
                                 <span class="time mt-2">
                                     Sala del Círculo Médico - Eldorado
@@ -106,7 +108,7 @@
                                     Estudiantes con <span>bono</span>
                                 </span>
                                 <span class="price mt-2 pb-4 mb-3">
-                                    <sup>$</sup>4000
+                                    <span>$</span>4000
                                 </span>
                                 <span class="time mt-2">
                                     Sala del Círculo Médico - Eldorado
@@ -144,8 +146,8 @@
         <div class="d-flex">
             <div class="item-footer">
                 <div>
-                    <p class="px-1">Estamos creciendo todos los años un poco más. Si querés sumarte al festival podés <br>
-                        <a class="px-3 py-2" href="#inicio"><i class="fa-regular fa-envelope px-1"></i> Escribirnos</a>
+                    <p class="px-1">Estamos creciendo todos los años un poco más, <strong>escribinos</strong> si querés sumarte al festival.<br>
+                        <a class="px-3 py-2" href="#inicio"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
                     </p>
                 </div>
             </div>
@@ -164,7 +166,9 @@
                 <p class="px-1">
                     Este festival cuenta con el apoyo del
                 </p>
-                <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+                <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                    <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+                </a>
             </div>
             <a class="prueba-gsap px-3 py-2" href="#inicio"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
