--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nosotros | Festival de Títeres</title>
+    <title>Nosotres | Festival de Títeres</title>
 
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="/css/css/bootstrap-grid.css">
@@ -21,22 +21,120 @@
                 <li><a href="obras-y-sedes.html#sedes">Sedes</a></li>
                 <li><a href="nosotros.html">Nosotres</a></li>
                 <li><a href="nosotros.html#quienes-somos">Sumate</a></li>
-                <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <div class="nav-redes">
+                    <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/TataPiriri" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                </div>
             </ul>
         </nav>
     </section>
-    <section id="info-programacion">
-        <h1>Quienes hacemos el festival</h1>
+
+    <section id="quienes-somos">
+        <h2>Quienes hacemos el festival</h2>
+        <div id="nosotros-tarjetas">
+            <article>
+                <img src="assets/img/Perfil-Omar.png" alt="Perfil de Omar Holz">
+                <h5>Omar Holz</h5>
+                <p>Organización</p>
+                <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                </div>
+            </article>
+            <article>
+                <img src="assets/img/Perfil-Luisa.png" alt="Perfil de Luisa González">
+                <h5>Luisa González</h5>
+                <p>Organización</p>
+                <!-- <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-envelope"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                </div> -->
+            </article>
+            <article>
+                <img src="assets/img/Perfil-Julian.png" alt="Perfil de Alejandro Rouel">
+                <h5>Alejandro Roel</h5>
+                <p>Organización</p>
+                <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                </div>
+            </article>
+            <article>
+                <img src="assets/img/Perfil-Vane.png" alt="Perfil de Vanesa Reyes">
+                <h5>Vanesa Reyes</h5>
+                <p>Organización</p>
+                <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                </div>
+            </article>
+            <article>
+                <img src="assets/img/Perfil-Julian.png" alt="Perfil de Julián Beck">
+                <h5>Julián Beck</h5>
+                <p>Iluminación</p>
+                <!-- <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                </div> -->
+            </article>
+            <article>
+                <img src="assets/img/Perfil-Cachu.png" alt="Perfil de Cachú">
+                <h5>Cachú</h5>
+                <p>Iluminación</p>
+                <!-- <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
+                </div> -->
+            </article>
+            <article>
+                <img src="assets/img/Perfil-Julian.png" alt="Perfil de Nahuel Beck">
+                <h5>Nahuel Beck</h5>
+                <p>Diseño gráfico</p>
+                <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </article>
+            <article>
+                <img src="assets/img/Perfil-Zona-Norte.png" alt="Equipo Zona Norte">
+                <h5>Equipo Zona Norte</h5>
+                <p>Organización</p>
+                <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                </div>
+            </article>
+        </div>
+        <div class="gente">
+            <i class="fa-regular fa-heart fa-2xl"></i>
+            <p>
+                También participa toda la comunidad de Eldorado colaborando para que siga siendo un hermoso festival!
+            </p>
+        </div>
+    </section>
+    <section id="otros-festivales">
+        <h2>Otros Festivales</h2>
+        <div class="festivales">
+            <a href="https://www.instagram.com/tatavera.titeres/" target="_blank" rel="noopener noreferrer">
+                <img src="images/2023-04-tata-vera-300x91.png" alt="Logo de Festival de Títeres Tatá Verá">
+                <p>Iguazú</p>
+            </a>
+            <a href="https://www.facebook.com/festivaldetitereskruvikas/?locale=es_LA" target="_blank" rel="noopener noreferrer">
+                <img src="images/2023-04-Kruvikas-300x237.png" alt="Festival de Títeres Kruvicas">
+                <p>Posadas</p>
+            </a>
+        </div>
     </section>
     <section id="quienes-somos">
-        <h1>Nosotros</h1>
+        <h2>Agradecimientos</h2>
     </section>
+
     <footer class="d-flex justify-content-between">
         <div class="d-flex">
             <div class="item-footer">
                 <div>
-                    <p class="px-1">Estamos creciendo todos los años un poco más. Si querés sumarte al festival podés <br>
-                        <a class="px-3 py-2" href="#inicio"><i class="fa-regular fa-envelope px-1"></i> Escribirnos</a>
+                    <p class="px-1">Estamos creciendo todos los años un poco más, <strong>escribinos</strong> si querés sumarte al festival.<br>
+                        <a class="px-3 py-2" href="#inicio"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
                     </p>
                 </div>
             </div>
@@ -55,7 +153,9 @@
                 <p class="px-1">
                     Este festival cuenta con el apoyo del
                 </p>
-                <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+                <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                    <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+                </a>
             </div>
             <a class="prueba-gsap px-3 py-2" href="#inicio"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
