--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -22,7 +22,10 @@
                 <li><a href="obras-y-sedes.html#sedes">Sedes</a></li>
                 <li><a href="nosotros.html">Nosotres</a></li>
                 <li><a href="nosotros.html#quienes-somos">Sumate</a></li>
-                <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                <div class="nav-redes">
+                    <li><a href="https://www.instagram.com/tata_piriri/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href="https://www.facebook.com/TataPiriri" target="_blank"><i class="fa-brands fa-facebook"></i></a></li>
+                </div>
             </ul>
         </nav>
     </section>
@@ -161,8 +164,8 @@
         <div class="d-flex">
             <div class="item-footer">
                 <div>
-                    <p class="px-1">Estamos creciendo todos los años un poco más. Si querés sumarte al festival podés <br>
-                        <a class="px-3 py-2" href="#inicio"><i class="fa-regular fa-envelope px-1"></i> Escribirnos</a>
+                    <p class="px-1">Estamos creciendo todos los años un poco más, <strong>escribinos</strong> si querés sumarte al festival.<br>
+                        <a class="px-3 py-2" href="#inicio"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
                     </p>
                 </div>
             </div>
@@ -171,7 +174,7 @@
                     <a class="px-1 mb-1" href="#inicio">Grupos y espectáculos</a>
                     <a class="px-1 mb-1" href="#inicio">Quienes somos</a>
                     <a class="px-1 mb-1" href="#inicio">Más festivales</a>
-                    <a class="px-1 mb-1" href="#inicio">Obras</a>
+                    <a class="px-1 mb-1" href="#inicio">Agradecimientos</a>
                     <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p>
                 </div>
             </div>
@@ -181,9 +184,11 @@
                 <p class="px-1">
                     Este festival cuenta con el apoyo del
                 </p>
-                <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+                <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                    <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+                </a>
             </div>
-            <a class="prueba-gsap px-3 py-2" href="#section-navegador"><i class="fa-solid fa-angles-up px-1"></i></a>
+            <a class="prueba-gsap px-3 py-2" href="#inicio"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
     </footer>
 
