--- a/nosotros.html
+++ b/nosotros.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+    <section id="top"></section>
     <section id="section-navegador">
         <nav id="navegador">
             <ul>
@@ -157,7 +158,7 @@
                     <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
                 </a>
             </div>
-            <a class="prueba-gsap px-3 py-2" href="#inicio"><i class="fa-solid fa-angles-up px-1"></i></a>
+            <a class="prueba-gsap px-3 py-2" href="#top"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
     </footer>
 
