--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 
+    <section id="top"></section>
     <section id="section-navegador">
         <nav id="navegador">
             <ul>
@@ -188,7 +189,7 @@
                     <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
                 </a>
             </div>
-            <a class="prueba-gsap px-3 py-2" href="#inicio"><i class="fa-solid fa-angles-up px-1"></i></a>
+            <a class="prueba-gsap px-3 py-2" href="#top"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
     </footer>
 
