Configuraciones de parámetros y rutas de archivos

--- a/form.html
+++ b/form.html
@@ -130,7 +130,7 @@
     <!-- <script src="js/custom.js"></script> -->
     <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
     <script src="https://unpkg.com/split-type"></script>
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
     
 </body>
 </html>
