--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script> -->
     <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
     <!-- <script src="https://unpkg.com/split-type"></script> -->
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
     
 
 </body>
