--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -200,7 +200,7 @@
     <!-- <script src="js/custom.js"></script> -->
     <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
     <script src="https://unpkg.com/split-type"></script>
-    <script type="module" src="/src/js/main.js"></script>
+    <script type="module" src="./src/js/main.js"></script>
     
 </body>
 </html>
