--- a/form.html
+++ b/form.html
@@ -30,7 +30,8 @@
         </nav>
     </section> 
 
-    <section id="form">
+    <!-- <section id="form"> -->
+        <section id="contact">
         <form name="contact" method="POST" data-netlify="true"> 
             <div id="form-contacto">
                 <h2>¡Sumate al festi!</h2>
