--- a/form.html
+++ b/form.html
@@ -30,11 +30,11 @@
         </nav>
     </section> 
 
-    <!-- <section id="form"> -->
-        <section id="contact">
-        <form name="contact" method="POST" data-netlify="true"> 
+     <section id="form">
+        
             <div id="form-contacto">
                 <h2>¡Sumate al festi!</h2>
+                <form name="contact" method="POST" data-netlify="true"> 
                 <p>
                     Referentes
                     <label>
