--- a/form.html
+++ b/form.html
@@ -78,12 +78,13 @@
                     <span>
                         Vamos a procesar el datos y comunicarnos con el referente lo antes posible.
                     </span>
-                    <p class="btn-enviar">
+                    <!-- <p class="btn-enviar">
                         <a type="submit" id="btn-transicion">
                             <span class="text">ENVIAR</span>
                             <span>¡Gracias por participar!</span>
                         </a>
-                    </p>
+                    </p> -->
+                    <span>Enviar</span>
                 </div>
             </div>
             <!-- <p class="btn-enviar"><button type="submit">Enviar</button></p> -->
