--- a/form.html
+++ b/form.html
@@ -78,16 +78,16 @@
                     <span>
                         Vamos a procesar el datos y comunicarnos con el referente lo antes posible.
                     </span>
-                    <!-- <p class="btn-enviar">
+                    <p class="btn-enviar">
                         <a type="submit" id="btn-transicion">
                             <span class="text">ENVIAR</span>
                             <span>¡Gracias por participar!</span>
                         </a>
-                    </p> -->
+                    </p> 
                     
                 </div>
             </div>
-            <span>Enviar</span>
+        
             <!-- <p class="btn-enviar"><button type="submit">Enviar</button></p> -->
         </form>
     </section>
