--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
     
             <div id="form-contacto">
                 <h2>¡Sumate al festi!</h2>
-                <form name="contact" method="POST" data-netlify="true" enctype="multiciart/form-data" action="#">
+                <form name="contact" method="POST" data-netlify="true" enctype="multipart/form-data" action="#">
                     <input type="hidden" name="form-name" value="contact">
                 <p>
                     Referentes
