--- a/form.html
+++ b/form.html
@@ -73,7 +73,7 @@
                 </p>
                 
                 <!-- <p>Adjuntá los archivos</p> -->
-                <div class="custom-file-container" data-upload-id="file-upload"></div>
+                <p class="custom-file-container" data-upload-id="file-upload"><p></p>
                 <input type="hidden" id="hidden-file-input" name="archivo[]" /><p>
                     
                     <label>Si querés comentarnos algo más <textarea name="message"></textarea></label>
