--- a/form.html
+++ b/form.html
@@ -73,8 +73,9 @@
                 </p>
                 
                 <!-- <p>Adjuntá los archivos</p> -->
-                <p class="custom-file-container" data-upload-id="file-upload"><p></p>
-                <input type="hidden" id="hidden-file-input" name="archivo[]" /><p>
+                <div id="file-upload"></div>
+                <!-- <p class="custom-file-container" data-upload-id="file-upload"><p></p> -->
+                <!-- <input type="hidden" id="hidden-file-input" name="archivo[]" /><p> -->
                     
                     <label>Si querés comentarnos algo más <textarea name="message"></textarea></label>
                 </p>
