--- a/form.html
+++ b/form.html
@@ -138,6 +138,7 @@
     <script src="https://unpkg.com/split-type"></script>
     <script type="module" src="./src/js/main.js"></script>
     <script src="ruta/al/archivo/Upload.js"></script>
+    <script src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js"></script>
 
     
 </body>
