--- a/form.html
+++ b/form.html
@@ -75,7 +75,7 @@
                 <!-- <p>Adjuntá los archivos</p> -->
                
                  <p class="custom-file-container" data-upload-id="file-upload"></p>
-                 <input type="hidden" id="hidden-file-input" name="archivo[]"></p>  
+                 <input type="hidden" id="hidden-file-input" name="archivo[]" /><p> 
                     <label>Si querés comentarnos algo más <textarea name="message"></textarea></label>
                 </p>
                 <div class="d-flex flex-column gap-3 justify-content-center align-items-center div-enviar">
