--- a/form.html
+++ b/form.html
@@ -137,7 +137,7 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/TextPlugin.min.js"></script> -->
     <!-- <script src="js/custom.js"></script> -->
     <!-- <script src="/js/js/bootstrap.js" crossorigin="anonymous"></script> -->
-    <script src="https://unpkg.com/split-type"></script>
+    <!-- <script src="https://unpkg.com/split-type"></script> -->
     <script type="module" src="./src/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
     
